# dibiff

./: .gitignore  .gitmodules  Adaptive  CMakeLists.txt  Dynamic  Effect  Filter  Gate  Generator  Graph  Level  Midi  README.md  Sink  Source  Synth  Time  dibiff  test.cpp
.github/workflows/: main.yml
inc/rtmidi/: Makefile.in  configure
inc/rtmidi/doc/: Makefile.in
inc/rtmidi/doc/html/: RtMidi_8h.html  RtMidi_8h_source.html  annotated.html  classMidiApi-members.html  classMidiApi.html  classMidiInApi-members.html  classMidiInApi.html  classMidiOutApi-members.html  classMidiOutApi.html  classRtMidi-members.html  classRtMidi.html  classRtMidiError-members.html  classRtMidiError.html  classRtMidiIn-members.html  classRtMidiIn.html  classRtMidiOut-members.html  classRtMidiOut.html  classes.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__C-interface.html  hierarchy.html  index.html  modules.html  rtmidi__c_8h.html  rtmidi__c_8h_source.html  structMidiInApi_1_1MidiMessage-members.html  structMidiInApi_1_1MidiMessage.html  structMidiInApi_1_1MidiQueue-members.html  structMidiInApi_1_1MidiQueue.html  (+2 more)
inc/rtmidi/tests/: Makefile.in
src/adaptive/: AcousticEchoCanceller.cpp  AcousticEchoCanceller.h  adaptive.h
src/dynamic/: Compressor.cpp  Compressor.h  Envelope.cpp  Envelope.h  Expander.cpp  Expander.h  Limiter.cpp  Limiter.h  dynamic.h
src/effect/: Chorus.cpp  Chorus.h  Flanger.cpp  Flanger.h  Phaser.cpp  Phaser.h  Reverb.cpp  Reverb.h  Tremolo.cpp  Tremolo.h  Vibrato.cpp  Vibrato.h  effect.h
src/filter/: AdaptiveFilter.cpp  AdaptiveFilter.h  AllPassFilter.cpp  AllPassFilter.h  BandPassFilter.cpp  BandPassFilter.h  DigitalBiquadFilter.cpp  DigitalBiquadFilter.h  HighPassFilter.cpp  HighPassFilter.h  HighShelfFilter.cpp  HighShelfFilter.h  LowPassFilter.cpp  LowPassFilter.h  LowShelfFilter.cpp  LowShelfFilter.h  NotchFilter.cpp  NotchFilter.h  PeakingEQFilter.cpp  PeakingEQFilter.h  filter.h
src/gate/: Ducker.cpp  Ducker.h  ExpanderGate.cpp  ExpanderGate.h  Lookahead.cpp  LookaheadGate.h  NoiseGate.cpp  NoiseGate.h  gate.h
src/generator/: SampleGenerator.cpp  SampleGenerator.h  SineGenerator.cpp  SineGenerator.h  SquareGenerator.cpp  SquareGenerator.h  TriangleGenerator.cpp  TriangleGenerator.h  VariableGenerator.cpp  VariableGenerator.h  WhiteNoiseGenerator.cpp  WhiteNoiseGenerator.h  generator.h
src/graph/: graph.cpp  graph.h
src/level/: AutomaticGainControl.cpp  AutomaticGainControl.h  Gain.cpp  Gain.h  Mixer.cpp  Mixer.h  level.h
src/midi/: KeyboardSimulator.cpp  KeyboardSimulator.h  MidiInput.cpp  MidiInput.h  VoiceSelector.cpp  VoiceSelector.h  midi.h
src/sink/: AudioPlayer.cpp  AudioPlayer.h  GraphSink.cpp  GraphSink.h  WavWriter.cpp  WavWriter.h  sink.h
src/source/: GraphSource.cpp  GraphSource.h  SineSource.cpp  SineSource.h  SquareSource.cpp  SquareSource.h  TriangleSource.cpp  TriangleSource.h  WhiteNoiseSource.cpp  WhiteNoiseSource.h  source.h
src/synth/: BabysFirstSynth.cpp  BabysFirstSynth.h  synth.h
src/time/: Delay.cpp  Delay.h  time.h
src/util/: RingBuffer.cpp  RingBuffer.h
test/: BabysFirstSynthTest.cpp  ChorusTest.cpp  KeyboardSimulatorTest.cpp  SampleTest.cpp  libTest.cpp
